deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-runner-api
  namespace: code-runner-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-runner-api
  template:
    metadata:
      labels:
        app: code-runner-api
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3shandson
      serviceAccountName: code-runner-api
      containers:
        - name: api
          image: code-runner-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
