deploy/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-runner-worker
  namespace: code-runner-system
spec:
  replicas: 0
  selector:
    matchLabels:
      app: code-runner-worker
  template:
    metadata:
      labels:
        app: code-runner-worker
    spec:
      nodeSelector:
        kubernetes.io/hostname: k3shandson
      serviceAccountName: code-runner-api
      containers:
        - name: worker
          image: code-runner-api:latest
          imagePullPolicy: IfNotPresent
          command:
            - /code-runner-worker
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
